Bug 61847 - tolerate pngs with invalid tailing IDAT chunk lengths
Summary: tolerate pngs with invalid tailing IDAT chunk lengths
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-05 11:44 UTC by Michael Meeks
Modified: 2013-03-22 11:45 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
broken png (5.19 KB, image/png)
2013-03-05 11:44 UTC, Michael Meeks
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Meeks 2013-03-05 11:44:37 UTC
Some PNGs are sloppily written with invalid last chunk lengths.

We should tolerate that; example attached.
Comment 1 Michael Meeks 2013-03-05 11:44:58 UTC
Created attachment 75950 [details]
broken png
Comment 2 Michael Meeks 2013-03-05 11:50:22 UTC
Fixed in master.
Comment 3 Commit Notification 2013-03-05 11:55:53 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0b789377ffc1a05b6c6a58e373900e378835e07e

fdo#61847 - tolerate invalid pngs.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2013-03-22 11:45:30 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ad65fea9c28542dcb986b693ec743b2ec668f0fd

fdo#61847 - add test file of png image with invalid final chunk length.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.