fdo#61847 - tolerate invalid pngs.

Change-Id: I02a6460e9fa50c1c11e4f4c972bf962064d57410